flux/infra/traefik/svc-local.yaml
apiVersion: v1
kind: Service
metadata:
  name: local-nodeport
  namespace: default
spec:
  type: NodePort
  selector:
    app.kubernetes.io/instance: traefik-default
    app.kubernetes.io/name: traefik
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      nodePort: 30001
